Fixing #91
Java model was returning truncated string, and title tag was using the
same. Changed implementation, now css is taking care of truncation.
Removed a test (shouldAbbreviateLongRevision) from Java Model test.

--- a/server/webapp/css/pipeline-history.css
+++ b/server/webapp/css/pipeline-history.css
@@ -111,6 +111,14 @@ font-size: 18px;
     position: relative; /* for popup */
 }
 
+.pipeline-history-group .pipeline-info.revision{
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 100%;
+    overflow: hidden;
+    display: inline-block;
+}
+
 .empty-stage,
 .passed-stage,
 .failed-stage,
